<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".GalleriesFragment">

    <TextView
        android:id="@+id/textView_galleries_outdoor2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/galleries_outdoor"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationY="10dp" />

    <TextView
        android:id="@+id/galleriesFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_galleries_outdoor2"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/galleriesFav"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold" />

    <SearchView
        android:id="@+id/searchingBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/galleriesFav"
        android:translationY="10dp" />

    <ImageView
        android:id="@+id/firstGallery"
        android:layout_width="125dp"
        android:layout_height="129dp"
        android:layout_below="@+id/searchingBox"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="354dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/secondGallery"
        android:layout_width="125dp"
        android:layout_height="129dp"
        android:layout_below="@+id/searchingBox"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="354dp"
        android:layout_toEndOf="@+id/firstGallery"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/thirdGallery"
        android:layout_width="125dp"
        android:layout_height="129dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/fourthGallery"
        android:layout_width="125dp"
        android:layout_height="129dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="250dp"
        android:layout_marginBottom="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textfirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstGallery"
        android:layout_marginTop="-340dp"
        android:layout_marginStart="30dp"
        android:text="@string/girl_with_pearl_earring" />

    <TextView
        android:id="@+id/textsecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondGallery"
        android:layout_marginStart="270dp"
        android:layout_marginTop="-340dp"
        android:text="@string/starry_night" />

    <TextView
        android:id="@+id/textthird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thirdGallery"
        android:layout_marginTop="-90dp"
        android:layout_marginStart="30dp"
        android:text="@string/american_office_gothic" />


    <TextView
        android:id="@+id/textforth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fourthGallery"
        android:layout_marginStart="280dp"
        android:layout_marginTop="-90dp"
        android:text="@string/nighthawks" />




</RelativeLayout>