<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/textView_welcome_to_creams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/welcome_to_creams"
        android:textAlignment="center"
        android:textSize="60sp"
        android:translationY="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_galleries_outdoor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_welcome_to_creams"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/galleries_outdoor"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/dis_closest_gallery_button"
        app:layout_constraintStart_toEndOf="@+id/textView_welcome_to_creams"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome_to_creams" />

    <Button
        android:id="@+id/dis_closest_gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/textView_galleries_outdoor"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dis_closest_gallery"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="italic"
        android:translationY="20dp"
        app:backgroundTint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_galleries_outdoor" />

    <TextView
        android:id="@+id/orTextview2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/dis_closest_gallery_button"
        android:text="@string/or_textview"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textSize="17sp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dis_closest_gallery_button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/dis_closest_artwork_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/orTextview2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dis_closest_artwork"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="italic"
        android:translationY="25dp"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orTextview2" />

    <TextView
        android:id="@+id/orTextview"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/dis_closest_gallery_button"
        android:text="@string/or_textview"
        android:textAlignment="center"
        android:textSize="17sp"
        android:translationY="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dis_closest_artwork_button" />

    <TextView
        android:id="@+id/textViewGalleriesNearYou"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_below="@id/orTextview2"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/galleries_near_you"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationY="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orTextview" />

    <Button
        android:id="@+id/button_all"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_below="@id/orTextview2"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/allString"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orTextview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_Galleries_Home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_all"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGalleriesNearYou" />


</androidx.constraintlayout.widget.ConstraintLayout>